crates/parser/tests/snapshots/statements/valid/advisory_lock@21.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: ROLLBACK;
---
Parse {
    cst: SourceFile@0..9
      Rollback@0..8 "ROLLBACK"
      Ascii59@8..9 ";"
    ,
    errors: [],
    stmts: [],
}
