crates/parser/tests/snapshots/statements/valid/advisory_lock@36.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: SELECT pg_advisory_unlock_all();
---
Parse {
    cst: SourceFile@0..32
      SelectStmt@0..32
        Select@0..6 "SELECT"
        Whitespace@6..7 " "
        ResTarget@7..29
          FuncCall@7..29
            Ident@7..29 "pg_advisory_unlock_all"
        Ascii40@29..30 "("
        Ascii41@30..31 ")"
        Ascii59@31..32 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: SelectStmt(
                SelectStmt {
                    distinct_clause: [],
                    into_clause: None,
                    target_list: [
                        Node {
                            node: Some(
                                ResTarget(
                                    ResTarget {
                                        name: "",
                                        indirection: [],
                                        val: Some(
                                            Node {
                                                node: Some(
                                                    FuncCall(
                                                        FuncCall {
                                                            funcname: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "pg_advisory_unlock_all",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            args: [],
                                                            agg_order: [],
                                                            agg_filter: None,
                                                            over: None,
                                                            agg_within_group: false,
                                                            agg_star: false,
                                                            agg_distinct: false,
                                                            func_variadic: false,
                                                            funcformat: CoerceExplicitCall,
                                                            location: 7,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        location: 7,
                                    },
                                ),
                            ),
                        },
                    ],
                    from_clause: [],
                    where_clause: None,
                    group_clause: [],
                    group_distinct: false,
                    having_clause: None,
                    window_clause: [],
                    values_lists: [],
                    sort_clause: [],
                    limit_offset: None,
                    limit_count: None,
                    limit_option: Default,
                    locking_clause: [],
                    with_clause: None,
                    op: SetopNone,
                    all: false,
                    larg: None,
                    rarg: None,
                },
            ),
            range: 0..31,
        },
    ],
}
